; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_rpcap-protocol.c_rpcap_msg_type_string.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_rpcap-protocol.c_rpcap_msg_type_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RPCAP_MSG_IS_REPLY = common dso_local global i32 0, align 4
@NUM_REPLY_TYPES = common dso_local global i32 0, align 4
@replies = common dso_local global i8** null, align 8
@NUM_REQ_TYPES = common dso_local global i32 0, align 4
@requests = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @rpcap_msg_type_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @RPCAP_MSG_IS_REPLY, align 4
  %6 = and i32 %4, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %23

8:                                                ; preds = %1
  %9 = load i32, i32* @RPCAP_MSG_IS_REPLY, align 4
  %10 = xor i32 %9, -1
  %11 = load i32, i32* %3, align 4
  %12 = and i32 %11, %10
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @NUM_REPLY_TYPES, align 4
  %15 = icmp sge i32 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %8
  store i8* null, i8** %2, align 8
  br label %34

17:                                               ; preds = %8
  %18 = load i8**, i8*** @replies, align 8
  %19 = load i32, i32* %3, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i8*, i8** %18, i64 %20
  %22 = load i8*, i8** %21, align 8
  store i8* %22, i8** %2, align 8
  br label %34

23:                                               ; preds = %1
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @NUM_REQ_TYPES, align 4
  %26 = icmp sge i32 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %23
  store i8* null, i8** %2, align 8
  br label %34

28:                                               ; preds = %23
  %29 = load i8**, i8*** @requests, align 8
  %30 = load i32, i32* %3, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i8*, i8** %29, i64 %31
  %33 = load i8*, i8** %32, align 8
  store i8* %33, i8** %2, align 8
  br label %34

34:                                               ; preds = %28, %27, %17, %16
  %35 = load i8*, i8** %2, align 8
  ret i8* %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
